<resources>
    <string name="app_name">BizConf Mobile</string>
    <string name="title_name_of_activity">BizConf Mobile</string>
    <string name="menu_settings">Setting</string>
    <string name="none"></string>
    <string name="main_tab_home">Home</string>
    <string name="main_tab_calendar">Calendar</string>
    <string name="main_tab_history">History</string>
    <string name="main_tab_service">Service</string>
    <string name="main_tab_setting">Setting</string>
    <string name="start_conf">Start</string>
    <string name="order_conf">Schedule</string>
    <string name="join_conf">Join</string>
    <string name="toast_in_button_join">Join</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="pass">Skip</string>
    <string name="confirm_exit">Exit？</string>
    <string name="confirm_exit_and_end_conf">You are in conference now,are you sure to exit and end conference？</string>
    <string name="add_conf">Add Conference Account</string>
    <string name="user_moderator_name">Moderator</string>
    <string name="user_guest_name">Me</string>
    <string name="account_name">Account Name</string>
    <string name="access_number">Access Number</string>
    <string name="conf_code">Conference Code</string>
    <string name="moderator_pw">Leader Pin</string>
    <string name="allow_to_outside_call_guest">Call Me</string>
    <string name="allow_to_outside_call">Call Me</string>
    <string name="conf_security_code">Security Code</string>
    <string name="input_number">Please enter your phone number</string>
    <string name="being_authenticated">In Progress Verifying &#8230;</string>
    <string name="edit">Edit</string>
    <string name="back">Back</string>
    <string name="del">Delete</string>
    <string name="begin_conf">Start</string>
    <string name="connecting">Connecting Conference &#8230;</string>
    <string name="wifi_toast">Please open network access to be called and use conference security code!</string>
    <string name="waiting_toast">Please wait for being called to join the conference</string>
    <string name="connecting_service">Connecting To Helpdesk</string>
    <string name="connected_service">Connected To Helpdesk</string>
    <string name="promopt_to_verify_phone">Please enter your phone number to download leader conference account</string>
    <string name="toast_request_bridge_time_out">Failed to load access numbers, please check your network</string>
    <string name="toast_error_conf_code">Failed to load access numbers, please check your conference number</string>
    <string name="toast_load_access_num_failed">Failed to load access numbers, please check the network and the conference number is valid or retry</string>
    <string name="toast_loading_access_number">Loading access number,please wait&#8230;</string>
    <string name="toast_conf_code_changed">Your conference code had been modified, please re-select or input the access number</string>
    <string name="toast_manual_input_access_num">Network is unavailable,please input the access number manually</string>
    <string name="toast_version_update_feature">New version avaiable, choose whether to update</string>
    <string name="toast_latest_version_title">Bizconf Mobile</string>
    <string name="toast_latest_version_time">Update time: %1$s</string>
    <string name="toast_is_latest_version">Your have the latest version</string>
    <string name="toast_connect_to_check_update">Connecting the server to check for updates,please wait &#8230;</string>
    <string name="toast_long_click_enter_conf">Please long press the account to re-enter the conference!</string>
    <string name="toast_not_enter_conference">You are in conference now, can not enter this conference!</string>
    <string name="toast_not_edit_account">You are in conference using this account, can not edit it!</string>
    <string name="toast_not_del_account">You are in conference using this account, can not delete it!</string>
    <string name="toast_join_other_conference">Join  %s Conference</string>
    <string name="toast_storage_access_denied">Access to storage be denied, please check.</string>
    <string name="toast_no_email_client">Sending email failed, please check email client!</string>
    <string name="toast_party_service_disenable">please switch to the phone keypad to use 00</string>
    <string name="toast_memory_recycled">Memory recycled by system, App will restart,if you are joining conference, please reentry it!</string>
    <string name="toast_manual_hang_up_original">Please manually hung up transferred number</string>
    <string name="toast_self_mute_disenable">Please switch to the phone keypad to use*6</string>
    <string name="toast_download_account_failed">Download account failed, please add account manually.</string>
    <string name="toast_start_time_less_than_now">Start time can not be less than now</string>
    <string name="toast_end_time_less_than_start">The end time required 5 minutes later than the start time</string>
    <string name="toast_del_no_schedule_account" formatted="false">Delete Account: %s ？</string>
    <string name="toast_del_event_time_out">Delete event time out, try again!</string>
    <string name="toast_being_delete_order_meeting">Deleting schedule meetings &#8230;</string>
    <string name="toast_del_account_msg">The current account contains schedule meetings, delete the account will delete all meetings associate with it.</string>
    <string name="toast_start_conf_msg" formatted="false">Start conference with account: %s？</string>
    <string name="toast_verify_code_error">Check Code Error</string>
    <string name="toast_connecting_start_conf">Connecting your conference, Please wait &#8230;</string>
    <string name="toast_start_conf_failed">Failed to start conference, Please check your network access or conference account or try again </string>
    <string name="add_normal_conf">Quick Add Participant Meeting#</string>
    <string name="add_moderator_account">Quick Add Host Meeting No.</string>
    <string name="apply_for_account">Contact customer service to apply for account</string>
    <string name="no_conf">No Conference History</string>
    <string name="toast_no_bind_account">No Binding Account</string>
    <string name="downloading_moderator_account">Downloading Leader Conference Account &#8230;</string>
    <string name="toast_phone_num_null">Phone Number Is Required</string>
    <string name="toast_phone_num_invalid">Invalid Mobile Phone Number</string>
    <string name="toast_email_address_invalid">Invalid Email Address</string>
    <string name="toast_phone_num_verify">Verifying Mobile Phone Number Failed </string>
    <string name="toast_check_code">Verifying, Please Wait &#8230;</string>
    <string name="toast_input_verify_code">Please enter your verification code</string>
    <string name="toast_input_verify">Please input valid phone number or email address</string>
    <string name="toast_security_code_null">Conference Security Code Is Required</string>
    <string name="toast_security_code_invalid">Invalid Conference Security Code</string>
    <string name="toast_security_code_verify">Verifying Conference Security Code Failed </string>
    <string name="toast_security_4_number">Conference Code Should Be 4 Numbers</string>
    <string name="toast_conf_code_num_error" formatted="false">The number of %s should be 2 ~ 18</string>
    <string name="toast_account_name_null">Account Name Is Required</string>
    <string name="toast_dial_in_num_null">Access Number Is Required</string>
    <string name="toast_conf_code_null">Conference Code Is Required</string>
    <string name="toast_moderator_pw_null">Leader Pin Is Required </string>
    <string name="toast_request_verify_dial_out_num">Please check your dial out number</string>
    <string name="toast_request_verify_security_code">Please check your conference security code</string>
    <string name="toast_order_conf_title">Title</string>
    <string name="toast_order_conf_date">Date</string>
    <string name="toast_order_conf_time">Time</string>
    <string name="toast_order_conf_from">From</string>
    <string name="toast_order_conf_to">To</string>
    <string name="toast_order_conf_period">Conference Period</string>
    <string name="toast_order_conf_count">Conference Times</string>
    <string name="toast_order_conf_body_content">Main Body Content</string>
    <string name="toast_order_conf_invite_party">Invite Participant</string>
    <string name="toast_top_date" formatted="false">%d-%d</string>
    <string name="toast_repeat_count_more_than_100">The number of conferences cannot be more than 100</string>
    <string name="toast_conf_account_be_removed">The conference account is not exist, you can not see the history of scheduled meetings</string>
    <string name="toast_title_not_be_null">Conference Title Is Required</string>
    <string name="toast_content_not_be_null">Conference Content Is Required</string>
    <string name="toast_repeat_count_not_be_null">RepeatTimes Is Required</string>
    <string name="toast_history_early_to_near">By Date↓</string>
    <string name="toast_history_near_to_early">By Date↑</string>
    <string name="toast_setting_account_set">Account Setting</string>
    <string name="toast_setting_passwd_protect">Password Protection</string>
    <string name="toast_setting_version_statement">Version Statement</string>
    <string name="toast_setting_about_us">About Us</string>
    <string name="toast_service_connection">
        Enquire or apply for conference account,please contact customer service\n
        CS information:\n
        Call us at：4000621818(China)\n
        86 21 60264111(Global)\n
        Email: css@bizconf.cn</string>
    <string name="toast_setting_check_update">Check For Updates</string>
    <string name="toast_service_world_access_number">Global Access Number List</string>
    <string name="toast_setting_moderator_account">Leader Account</string>
    <string name="toast_setting_join_account">Participant Account</string>
    <string name="toast_network_not_ready">Please Open 3G or wifi network!</string>
	<string name="toast_network_unavailable">Unavailable Network Access, Please Check</string>
    <string name="toast_network_not_fast">Unavailable network access, Failed to use conference tool</string>
    <string name="toast_leave_conf">Leave Conference</string>
    <string name="conf_open_hf">Handsfree</string>
    <string name="conf_mute_self">Mute Yourself</string>
    <string name="conf_mute_all">Mute All</string>
    <string name="conf_call_name">Roll Call</string>
    <string name="conf_record">Recording</string>
    <string name="conf_add_participant">Add Participant</string>
    <string name="conf_lock">LocK</string>
    <string name="conf_transfer">Phone Transfer</string>
    <string name="conf_other_function">Other Features</string>
    <string name="noRepeat">No Repeat</string>
    <string name="everyDay">Everyday</string>
    <string name="everyWeek">Every Week</string>
    <string name="everyMonth">Every Month</string>
    <string name="everyYear">Every Year</string>
    <string name="week_1">Sun</string>
    <string name="week_2">Mon</string>
    <string name="week_3">Tue</string>
    <string name="week_4">Wed</string>
    <string name="week_5">Thu</string>
    <string name="week_6">Fri</string>
    <string name="week_7">Sat</string>
   <string name="phone_transfer_alert">Enter the number you want to transfer, fixed telephone, dial the area code</string>
   <string name="divide_phone_transfer_alert">Enter the extension number</string>
   <string name="rename_input_newName">Rename</string>
   <string name="conf_bt_back">Back to the main menu</string>
   <string name="conf_bt_leave">Leave conference</string>
   <string name="conf_bt_finish">Finish conference</string>
   <string name="conf_bt_cancel">Cancel</string>
   <string name="location_change_now_you">You are in</string>
</resources>