<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:sktlab="http://schemas.android.com/apk/res/com.sktlab.bizconfmobile"
    style="@style/LayoutBase.Vertical.Content" >

    <TextView
        android:id="@+id/tv_home_title"
        style="@style/HeadlineStyle"
        android:layout_marginBottom="10dp"
        android:text="@string/title_name_of_activity" />

    <com.sktlab.bizconfmobile.customview.TextArrow
        android:id="@+id/setting_account_set"
        style="@style/LayoutTextArrow.Top"
        sktlab:centerLabelText="@string/none"
        sktlab:leftLabelText="@string/toast_setting_account_set"
        sktlab:rightImgSrc="@drawable/disclosure_arrow" >
    </com.sktlab.bizconfmobile.customview.TextArrow>
	
    <com.sktlab.bizconfmobile.customview.TextArrow
        android:id="@+id/setting_passwd_protect"
        style="@style/LayoutTextArrow.Center"
        sktlab:centerLabelText="@string/none"
        sktlab:leftLabelText="@string/toast_setting_passwd_protect"
        sktlab:rightImgSrc="@drawable/disclosure_arrow" >
    </com.sktlab.bizconfmobile.customview.TextArrow>
    
    <com.sktlab.bizconfmobile.customview.TextArrow
        android:id="@+id/setting_version_statement"
        style="@style/LayoutTextArrow.Center"
        sktlab:centerLabelText="@string/none"
        sktlab:leftLabelText="@string/toast_setting_version_statement"
        sktlab:rightImgSrc="@drawable/disclosure_arrow" >
    </com.sktlab.bizconfmobile.customview.TextArrow>

    <com.sktlab.bizconfmobile.customview.TextArrow
        android:id="@+id/setting_check_update"
        style="@style/LayoutTextArrow.Center"
        sktlab:centerLabelText="@string/none"
        sktlab:leftLabelText="@string/toast_setting_check_update"
        sktlab:rightImgSrc="@android:color/transparent" >
    </com.sktlab.bizconfmobile.customview.TextArrow>
    
    <com.sktlab.bizconfmobile.customview.TextArrow
        android:id="@+id/setting_about_us"
        style="@style/LayoutTextArrow.Bottom"
        sktlab:centerLabelText="@string/none"
        sktlab:leftLabelText="@string/toast_setting_about_us"
        sktlab:rightImgSrc="@drawable/disclosure_arrow" >
    </com.sktlab.bizconfmobile.customview.TextArrow>

</LinearLayout>