<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/state_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/input_single"
    android:orientation="vertical" 
    >

    <Button
        android:id="@+id/conf_bt_back"
      	style="@style/specialButton"
        android:text="@string/conf_bt_back"
        />
     <Button
        android:id="@+id/conf_bt_leave"
        style="@style/specialButton"
        android:text="@string/conf_bt_leave"
        />
      <Button
        android:id="@+id/conf_bt_finish"
        style="@style/specialButton"
        android:text="@string/conf_bt_finish"
        />
       <Button
        android:id="@+id/conf_bt_cancel"
        style="@style/specialButton"
        android:text="@string/conf_bt_cancel"
        />
</LinearLayout>
   
