<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/LayoutBase.Vertical.Content" >

    <include
        android:id="@+id/title"
        layout="@layout/title_layout" />

    <RadioGroup
        android:id="@+id/rg_repeat_period"
        style="@style/LayoutBase.SingleMoudle" >

        <RadioButton
            android:id="@+id/radio_none"
            style="@style/CheckBoxInnerRight"
            android:text="@string/noRepeat" />

        <TextView style="@style/SperatorLine" />

        <RadioButton
            android:id="@+id/radio_every_day"
            style="@style/CheckBoxInnerRight"
            android:text="@string/everyDay" />
        
        <TextView style="@style/SperatorLine" />
        
        <RadioButton
            android:id="@+id/radio_every_week"
            style="@style/CheckBoxInnerRight"
            android:text="@string/everyWeek" />

        <TextView style="@style/SperatorLine" />

        <RadioButton
            android:id="@+id/radio_every_month"
            style="@style/CheckBoxInnerRight"
            android:text="@string/everyMonth" />
        
        <TextView style="@style/SperatorLine" />

        <RadioButton
            android:id="@+id/radio_every_year"
            style="@style/CheckBoxInnerRight"
            android:text="@string/everyYear" />
    </RadioGroup>

</LinearLayout>