<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:sktlab="http://schemas.android.com/apk/res/com.sktlab.bizconfmobile"
    style="@style/LayoutBase.Vertical.Content" >

    <TextView
        android:id="@+id/tv_home_title"
        style="@style/HeadlineStyle"
        android:text="@string/title_name_of_activity" />

    <TextView
        android:id="@+id/service_connection"
        style="@style/TextBoxBase.SingleTexBox.SingleEditText.MultiInput"
        android:autoLink="email|phone"
        android:lines="7"
        android:text="@string/toast_service_connection" />

    <com.sktlab.bizconfmobile.customview.TextArrow
        android:id="@+id/service_world_access_number"
        style="@style/LayoutTextArrow"
        sktlab:centerLabelText="@string/none"
        sktlab:leftLabelText="@string/toast_service_world_access_number"
        sktlab:rightImgSrc="@drawable/disclosure_arrow" >
    </com.sktlab.bizconfmobile.customview.TextArrow>

</LinearLayout>