<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/LayoutBase.Vertical.Content" >

    <TextView
        android:id="@+id/tv_home_title"
        style="@style/HeadlineStyle"
        android:text="@string/title_name_of_activity" />

    <RadioGroup
        android:id="@+id/rg_function_moudle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="horizontal" 
        android:background="@drawable/home_radio_function_bg">

        <RadioButton
            android:id="@+id/rb_start_conf"
			style="@style/HomeFuncRadioButtonStyle"
            android:drawableTop="@drawable/selector_radio_start_conf"
            android:text="@string/start_conf"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/rb_order_conf"
            style="@style/HomeFuncRadioButtonStyle"
            android:drawableTop="@drawable/selector_radio_order_conf"           
            android:text="@string/order_conf"
            />

        <RadioButton
            android:id="@+id/rb_join_conf"
            style="@style/HomeFuncRadioButtonStyle"
            android:drawableTop="@drawable/selector_radio_join_conf"          
            android:text="@string/join_conf"
            />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/layout_check_number"
        style="@style/LayoutBase.Vertical.CornerBg"
        android:visibility="gone" >

        <TextView
            android:id="@+id/tv_prompt_text"
            style="@style/TextBoxBase"
            android:gravity="center"
            android:text="@string/promopt_to_verify_phone"
            android:textSize="12dp"/>

        <EditText
            android:id="@+id/et_input_number"
            style="@style/TextBoxBase.SingleTexBox"
            android:inputType="phone" /><LinearLayout
            android:id="@+id/layout_control_bar"
            style="@style/LayoutBase.Horizontal"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/bt_confirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="10dp"
                android:background="@drawable/selector_app_bt_confirm"
                android:textColor="@color/white"
                android:text="@string/ok" />

            <Button
                android:id="@+id/bt_pass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"           
                android:layout_weight="1"
                android:background="@drawable/selector_home_verify_bt_pass"
                android:textColor="@color/white"
                android:text="@string/pass" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_conf_account"
        style="@style/LayoutBase.Vertical.CornerBg"
        android:orientation="vertical">

        <ListView
            android:id="@+id/lv_download_conf"
            style="@style/Normal_List"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:scrollbarFadeDuration="0"
  			android:fadeScrollbars="false" 
            android:footerDividersEnabled="false" >
        </ListView>

        <Button
            android:id="@+id/bt_add_conf_account"
            style="@style/TextBoxBase.SingleTexBox.ConfirmBt"
            android:text="@string/add_moderator_account" />
    </LinearLayout>

</LinearLayout>