<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <include
        android:id="@+id/title"
        layout="@layout/title_layout" />

    <LinearLayout
        android:id="@+id/layout_for_moderator_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="1dp"
        android:background="@color/white"
        android:orientation="horizontal" >

        <CheckedTextView
            android:id="@+id/rb_open_hf"
            style="@style/CheckTextViewBase"
            android:drawableTop="@drawable/selector_home_add_conf_hf"
            android:text="@string/conf_open_hf" />

        <CheckedTextView
            android:id="@+id/rb_self_mute"
            style="@style/CheckTextViewBase"
            android:drawableTop="@drawable/selector_home_add_conf_self_mute"
            android:text="@string/conf_mute_self" />

        <CheckedTextView
            android:id="@+id/rb_mute_all"
            style="@style/CheckTextViewBase"
            android:drawableTop="@drawable/selector_home_add_conf_mute_all"
            android:text="@string/conf_mute_all" />

        <CheckedTextView
            android:id="@+id/rb_call_name"
            style="@style/CheckTextViewBase"
            android:drawableTop="@drawable/selector_home_add_conf_roll_call"
            android:text="@string/conf_call_name" />

        <CheckedTextView
            android:id="@+id/rb_record"
            style="@style/CheckTextViewBase"
            android:drawableTop="@drawable/selector_home_add_conf_record"
            android:text="@string/conf_record" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_for_moderator_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal" >

        <CheckedTextView
            android:id="@+id/rb_add_participant"
            style="@style/CheckTextViewBase"
            android:drawableTop="@drawable/selector_home_add_conf_add_party"
            android:text="@string/conf_add_participant" />

        <CheckedTextView
            android:id="@+id/rb_lock"
            style="@style/CheckTextViewBase"
            android:drawableTop="@drawable/selector_home_add_conf_lock"
            android:text="@string/conf_lock" />

        <CheckedTextView
            android:id="@+id/rb_phone_transfer"
            style="@style/CheckTextViewBase"
            android:drawableTop="@drawable/selector_home_add_conf_transform"
            android:text="@string/conf_transfer" />

        <CheckedTextView
            android:id="@+id/rb_other_function"
            style="@style/CheckTextViewBase"
            android:drawableTop="@drawable/selector_home_add_conf_other"
            android:text="@string/conf_other_function" />

        <CheckedTextView
            android:id="@+id/rb_reserved_1"
            style="@style/CheckTextViewBase"
            android:drawableTop="@android:drawable/btn_radio"
            android:text="@string/conf_other_function"
            android:visibility="invisible" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_for_guest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="1dp"
        android:background="@color/white"
        android:orientation="horizontal" >

        <CheckedTextView
            android:id="@+id/ctv_guest_hf"
            style="@style/CheckTextViewBase"
            android:drawableTop="@drawable/selector_home_add_conf_hf"
            android:text="@string/conf_open_hf" />

        <CheckedTextView
            android:id="@+id/ctv_guest_self_mute"
            style="@style/CheckTextViewBase"
            android:drawableTop="@drawable/selector_home_add_conf_self_mute"
            android:text="@string/conf_mute_self" />

        <CheckedTextView
            android:id="@+id/ctv_guest_transfer"
            style="@style/CheckTextViewBase"
            android:drawableTop="@drawable/selector_home_add_conf_transform"
            android:text="@string/conf_transfer" />

<!--         <CheckedTextView
            android:id="@+id/ctv_guest_roll_call"
            style="@style/CheckTextViewBase"
            android:drawableTop="@drawable/selector_home_add_conf_roll_call"
            android:text="@string/conf_call_name" /> -->
    </LinearLayout>

    <ExpandableListView
        android:id="@+id/elv_participant_list"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:background="@color/listview_bg_color"
        android:cacheColorHint="#00000000"
        android:groupIndicator="@android:color/transparent"
        android:listSelector="#00000000" >
    </ExpandableListView>

</LinearLayout>