
<LinearLayout
    	xmlns:android="http://schemas.android.com/apk/res/android"
	    xmlns:tools="http://schemas.android.com/tools"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="@drawable/input_single"
	    android:orientation="vertical"
	    android:padding="0dp"
	    >
	    
	   <TextView
        android:id="@+id/tv_home_title"
        style="@style/HeadlineStyle"
        android:text="@string/title_name_of_activity" />
	   
	   <TextView
	            android:id="@+id/location_change_tv"
	           	android:layout_marginLeft="10dp" 
	           	android:layout_marginRight="10dp"
	           	android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:textColor="#000"
	    		android:textSize="20sp"
	    		android:text="@string/location_change_now_you"
	           />  
	    <ListView
	        android:layout_marginLeft="10dp" 
	        android:layout_marginRight="10dp"
	        android:id="@+id/location_change_lv" 
	        android:layout_width="match_parent"
	    	android:layout_height="80dp"
	        >
	    </ListView>
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" 
	        android:orientation="horizontal"
	        >
	        <Button
	            android:id="@+id/location_change_cancel"
	            android:layout_width="match_parent"
	        	android:layout_height="match_parent"
	        	android:layout_weight="1"
	        	android:text="@string/cancel"
	            />
	        <Button
	            android:id="@+id/location_change_ok"
	            android:layout_width="match_parent"
	        	android:layout_height="match_parent"
	        	android:layout_weight="1"
	        	android:text="@string/ok"
	            />
	    </LinearLayout>
	    

</LinearLayout>