<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:id="@+id/layout_account_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
    	android:paddingTop="5dp" 
    	android:paddingBottom="5dp"
    	android:background="@android:color/transparent">
<!-- android:background="@drawable/selector_home_account_lv_item"  -->
        <TextView
            android:id="@+id/tv_conf_name"
            style="@style/TextBoxBase"
            android:layout_height="wrap_content"
            android:text="@string/title_name_of_activity" >
        </TextView>

        <TextView
            android:id="@+id/tv_conf_code"
			style="@style/TextBoxBase"
            android:layout_height="wrap_content"
            android:text="@string/title_name_of_activity" >
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_bt_module"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone" >

        <Button
            android:id="@+id/bt_edit"
            android:text="@string/edit"
			style="@style/ButtonBase.InListView"           
            android:drawableTop="@drawable/home_lv_bt_icon_editor"           
            />

        <Button
            android:id="@+id/bt_start"
            android:text="@string/begin_conf"
            style="@style/ButtonBase.InListView" 
            android:drawableTop="@drawable/home_lv_bt_icon_start"
            />

        <Button
            android:id="@+id/bt_del"
            android:text="@string/del"
        	style="@style/ButtonBase.InListView" 
            android:drawableTop="@drawable/home_lv_bt_icon_delete"
            />
    </LinearLayout>

</LinearLayout>